# carnet-de-bord

./: .dockerignore  .editorconfig  .env  .env.sample  .env.test  .env.test.sample  .envrc  .eslintignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc  .releaserc  .sonarcloud.properties  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  DEMO.md  DEPLOY.md  DEVELOPING.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  Makefile  README.md  TESTING.md  azimutt.json  babel.config.cjs  codegen.cjs  cypress.json  docker-compose-test.yaml  docker-compose.yaml  flake.nix  jest.config.cjs  jest.config.json  knexfile.js  package-lock.json  package.json  renovate.json  rome_codes.sql  (+4 more)
backend/: .buildpacks  .slugignore  .testmondata-shm  .testmondata-wal  Dockerfile  Procfile  README.md  cron.json  get-poetry.py  pyproject.toml  pytest.ini
backend/api/: main.py  sendmail.py  views.py
backend/api/_gen/: schema_gql.py
backend/api/core/: db.py  emails.py  exceptions.py  init.py  jinja.py  logging.py  sendmail.py  settings.py  test_emails.py
backend/api/db/: beneficiary.py
backend/api/templates/: deny_orientation_request_email.html  former_notebook_member_email.html  new_notebook_member_email.html  notebook_member_email.html
backend/api/v1/: dependencies.py  main.py
backend/backend/api/: main.py
backend/backend/cdb_csv/: categorisation_des_actions_du_fichier_PE.csv  pe.py
backend/backend/scripts/: connect_to_db.py  export_notebook.py  parse_csv_pe.py  pe_api.py
backend/cdb/: graphql.py
backend/cdb/api/: __init__.py  main.py  schema_gql.py
backend/cdb/caf_msa/: parse_infos_foyer_rsa.py  update_beneficiary.py  update_cafmsa_infos.py  validate_xml.py  vrsb0801.xsd
backend/cdb/cdb_csv/: pe.py
backend/cdb/pe/: pole_emploi_client.py  settings.py
backend/cdb/scripts/: codegen.py  connect_to_db.py  export_notebook.py  parse_csv_pe.py  pe_api.py  pe_update_notebook.py
backend/cdb_csv/: categorisation_des_actions_du_fichier_PE.csv  csv_row.py  json_encoder.py  pe.py
backend/cdb_csv/crud/: actions.py
backend/cdb_csv/models/: csv_row.py
backend/pe/: pole_emploi_client.py  referentiel_agences_client.py
backend/pe/api/: auth.py
backend/pe/models/: agence.py  auth.py
backend/scripts/: codegen.sh  connect_to_db.py  export_notebook.py  parse_csv_pe.py  pe-fetch.sh  pe-parse.sh  pe_api.py
backend/tests/: conftest.py  export_notebook.json  test_account.py  test_audit_triggers.py  test_backend.py  test_beneficiary.py  test_beneficiary.test_get_beneficiaries_without_referent.approved.txt  test_beneficiary.test_get_beneficiaries_without_referent_and_deleted_admin_structure.approved.txt  test_beneficiary_import.py  test_export_notebook.py  test_external_data.py  test_graphql.py  test_nir_check.py  test_notebook.py  test_notebook_info.py  test_parse_csv.py  test_pe_api_client.py  test_pe_api_client.test_get_contraintes.approved.json  test_pe_csv_action_import.py  test_pe_csv_import.py  test_professional.py  test_structure.py
backend/tests/__snapshots__/: test_beneficiary.ambr  test_pe_api_client.ambr
backend/tests/api/: TestNotifyAdminStructure.test_notify_admin_structures_when_one_beneficiary_without_referent_with_one_admin_structure.approved.html  TestNotifyAdminStructure.test_notify_admin_structures_when_one_beneficiary_without_referent_with_one_admin_structure.approved.txt  TestNotifyAdminStructure.test_notify_admin_structures_when_one_beneficiary_without_referent_with_two_admin_structures.approved.txt  test_add_notebook_member.py  test_admin_structures.py  test_csv2json.py  (+34 more)
(+2961 files in other folders)
