[tool.poetry]
name = "cdb"
version = "1.243.3"
description = ""
authors = ["LionelB <lionel@lumographe.fr>"]

[tool.poetry.dependencies]
Jinja2 = "^3.1.2"
PyJWT = "^2.4.0"
StrEnum = "^0.4.7"
asyncpg = "0.27.0"
chardet = "^5.0.0"
colorama = "^0.4.4"
dask = "2023.4.0"
fastapi = "0.95.1"
fastapi-asyncpg = "^1.0.1"
gql = {extras = ["aiohttp"], version = "^3.4.0"}
httpx = "0.24.0"
luhn-validator = "^1.1.4"
numpy = "^1.22.3"
openpyxl = "^3.0.10"
panda = "^0.3.1"
pandas = "2.0.0"
phonenumbers = "^8.12.56"
pydantic = {extras = ["email"], version = "^1.9.1"}
python = ">=3.10,<3.12"
python-dateutil = "^2.8.2"
python-dotenv = "1.0.0"
python-magic = "^0.4.26"
python-multipart = "0.0.6"
respx = "^0.20.0"
sentry-sdk = "^1.14.0"
shellingham = "^1.4.0"
structlog = "23.1.0"
structlog-sentry = "^2.0.0"
typer = "0.7.0"
uvicorn = "0.21.1"
xlrd = "^2.0.1"
lxml = "^4.9.2"
backoff = "^2.2.1"
mypy-extensions = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-asyncio = "0.21.0"
pytest-mock = "^3.7.0"
pytest-testmon = "2.0.6"
pytest-watch = "^4.2.0"
approvaltests = "^8.2.5"
faker = "^18.13.0"

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "B",  # flake8-bugbear
    "I",  # Isort
]
ignore = [
    # Do not perform function call `XXX` in argument defaults.
    # FastAPI Depends() relies on this.
    "B008",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
